# echokit-console

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  start-dev.sh  stop-dev.sh
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 001_create_devices_table.sql  002_add_default_server.sql  003_create_users_table.sql  004_add_user_id_to_tables.sql  005_normalize_mac_address_format.sql  006_add_firmware_version.sql
backend/src/: main.rs
backend/src/api/: activation_handlers.rs  auth_handlers.rs  device_handlers.rs  handlers.rs  mod.rs  router.rs
backend/src/config/: mod.rs
backend/src/docker/: echokit_config.rs  manager.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: activation.rs  device.rs  mod.rs  user.rs
backend/src/store/: mod.rs  pg_device_store.rs  pg_user_store.rs  redis_activation_store.rs
data/configs/Alibaba/: config.toml
docs/: docker-compose-deployment.md
frontend/: .env.example  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: ActivateDeviceModal.tsx  ContainerList.tsx  DeployForm.tsx  ProtectedRoute.tsx  RegisterDeviceModal.tsx  index.ts
frontend/src/pages/: Dashboard.tsx  Device.tsx  DeviceActivation.tsx  Login.tsx  Register.tsx  Settings.tsx  index.ts
frontend/src/services/: api.ts  authApi.ts  bluetooth.ts  deviceApi.ts  index.ts
frontend/src/stores/: authStore.ts  deployStore.ts  index.ts
frontend/src/types/: auth.ts  device.ts  echokit.ts  index.ts
proxy/: .env.example  .gitignore  Cargo.toml  Dockerfile
proxy/src/: config.rs  forwarder.rs  handler.rs  http_proxy.rs  main.rs  models.rs  store.rs
