[workspace]
resolver = "2"
members = [
    "backend",
    "proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dotenv = "0.15"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }
