[package]
name = "echokit-console"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Docker API
bollard = "0.19"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# 工具
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenv = "0.15"
