[package]
name = "echokit-console"
version.workspace = true
edition.workspace = true

[dependencies]
# Web 框架
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Docker API
bollard = "0.19"

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# 工具
uuid = { version = "1", features = ["v4"] }
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true

# 数据库
sqlx.workspace = true
dotenv.workspace = true
