[package]
name = "echokit-backend"
version.workspace = true
edition.workspace = true

[dependencies]
# Web 框架
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Docker API
bollard = "0.19"

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# 工具
uuid = { version = "1", features = ["v4"] }
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true

# 数据库
sqlx.workspace = true
dotenv.workspace = true

# 认证
jsonwebtoken = "9"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }

# Redis（设备激活码存储）
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# 随机数生成
rand = "0.8"
hex = "0.4"
