[package]
name = "echokit-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
# Web 框架
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# WebSocket
tokio-tungstenite = "0.28"
futures-util.workspace = true

# 数据库
sqlx.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 配置
dotenv.workspace = true

# 时间
chrono.workspace = true
